add view function to store the data

--- a/django_api_enpoint/api/templates/api/api_endpoint.html
+++ b/django_api_enpoint/api/templates/api/api_endpoint.html
@@ -1,22 +1,39 @@
 {% extends 'base.html' %}
 
+{% load static i18n %}
+
 {% block content %}
-    <div class="container">
-    <h2 class="text-center">Welcome to test api endpoint</h2><br>			
+<div class="row">
+    <div class="col align-self-center">
+        <h1 class="kobo-title" style="margin: 20px; font-size: xx-large;">List Data from Kobo</h1>
     </div>
-    <table class="table is-fullwidth is-striped is-bordered">
-        <thead>
-        <tr>
-            <th>Key</th>
-            <th>Value</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for key, value in response.items %}
-        <tr>
-            <td>{{ key }}: {{value}}</td>
-        </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+</div>
+<table class="table is-fullwidth is-striped is-bordered">
+    <thead>
+    <tr>
+        <th scope="col">Data</th>
+        <th scope="col">Naran</th>
+        <th scope="col">Municipiu</th>
+        <th scope="col">Postu</th>
+        <th scope="col">Suco</th>
+    </tr>
+    </thead>
+    <tbody>
+        {% if all_beneficiary %}
+            {% for kobo in all_beneficiary %}
+            <tr>
+                <th scope="row">{{kobo.Data}}</th>
+                <td>{{ kobo.Naran }}</td>
+                <td>{{ kobo.Municipiu }}</td>
+                <td>{{ kobo.Postu }}</td>
+                <td>{{ kobo.Suco }}</td>
+            </tr>
+            {% endfor %}
+        {% else %}
+            <div>
+              <p>No items Available</p>
+            </div>
+        {% endif %}
+    </tbody>
+</table>
 {% endblock %}
