--- a/django_api_enpoint/api/templates/base.html
+++ b/django_api_enpoint/api/templates/base.html
@@ -28,6 +28,8 @@
 
     {% block content %}
 
+    <img src="{% static 'img/lesson_complete.svg' %}" width="530" height="530" class="d-inline-block align-top" alt="">
+
     {% endblock %}
 
     {% block footer %}
